pulling previous master

--- a/index.html
+++ b/index.html
@@ -58,6 +58,7 @@
     <script src="js/p5.dom.min.js"></script>
     <script src ="js/fbGetSet.js"></script>
     <script src="js/interaction.js"></script>
+    <script src="js/vectorDraw.js"></script>
     <script src="js/record.js"></script>
     <script src="js/draw.js"></script>
 </body>
