--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
 <!-- Button trigger modal -->
       
       <!-- Modal -->
-      <div class="modal fade" id="exampleModalCenter" tabindex="-1" role="dialog" aria-labelledby="exampleModalCenterTitle" aria-hidden="true">
+      <div class="modal fade" id="info" tabindex="-1" role="dialog" aria-labelledby="exampleModalCenterTitle" aria-hidden="true">
         <div class="modal-dialog modal-dialog-centered" role="document">
           <div class="modal-content">
             <div class="modal-header">
@@ -44,15 +44,15 @@
                 <span aria-hidden="true">&times;</span>
               </button>
             </div>
-            <div class="modal-body">
-                How to make a loopy drawing: 
+            <div class="modal-body" class="modal-dialog modal-lg">
+                <h5>How to make a loopy drawing: </h5>
             <ul>
-                <li>Click a draw tool in the "toolbox" section</li>
-               <li>Draw something on the canvas!</li>
-               <li>When you release the mouse, a module will pop into the "tools" section. You can modify or delete your sound drawing here.</li>
-                <li>If you like what you made, hit "save" in top right corner to save to the gallery.</li>
-                <li>Press "new" to start over</li>
-                <li>Press "gallery" to see a gallery of other loopings</li>
+                <li><p>Click a draw tool in the "toolbox" section</p></li>
+               <li><p>Draw something on the canvas!</p></li>
+               <li><p>When you release the mouse, a module will pop into the "tools" section. You can modify or delete your sound drawing here.</p></li>
+                <li><p>If you like what you made, hit "save" in top right corner to save to the gallery.</p></li>
+                <li><p>Press "new" to start over</p></h3>
+                <li><p>Press "gallery" to see a gallery of other loopings</p></li>
             </ul>
             </div>
             <div class="modal-footer">
@@ -61,6 +61,56 @@
           </div> 
         </div>
       </div>
+
+      <div class="modal fade" id="newDrawing" tabindex="-1" role="dialog" aria-labelledby="exampleModalCenterTitle" aria-hidden="true">
+        <div class="modal-dialog modal-dialog-centered" role="document">
+          <div class="modal-content">
+            <div class="modal-header">
+              <h5 class="modal-title" id="exampleModalLongTitle">DrawLoop</h5>
+              <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                <span aria-hidden="true">&times;</span>
+              </button>
+            </div>
+            <div class="modal-body" class="modal-dialog modal-lg">
+            <ul>
+                <h5>Heads up!</h5> 
+                <p>You are about to clear your drawing. Cool?</p>
+            </ul>
+            </div>
+            <div class="modal-footer">
+              <button type="button" class="user" data-dismiss="modal">Nope!</button>
+              <button type="button" class="user" data-dismiss="modal" id="deleteDrawing">Yup!</button>
+            </div>
+          </div> 
+        </div>
+      </div>
+
+      <div class="modal fade" id="galleryWarning" tabindex="-1" role="dialog" aria-labelledby="exampleModalCenterTitle" aria-hidden="true">
+            <div class="modal-dialog modal-dialog-centered" role="document">
+              <div class="modal-content">
+                <div class="modal-header">
+                  <h5 class="modal-title" id="exampleModalLongTitle">DrawLoop</h5>
+                  <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                    <span aria-hidden="true">&times;</span>
+                  </button>
+                </div>
+                <div class="modal-body" class="modal-dialog modal-lg">
+                <ul>
+                    <h5>Heads up!</h5>
+                    <p>You are about to head to the Gallery, which will clear your drawing. If not, click no, and save first :)</p>
+                </ul>
+                </div>
+                <div class="modal-footer">
+                  <button type="button" class="user" data-dismiss="modal">Nope!</button>
+                  <button type="button" class="user" data-dismiss="modal" id="populateGallery">Yup!</button>
+                </div>
+              </div> 
+            </div>
+          </div>
+
+
+
+
 <!-- begin container -->
 <div id="mainDiv" class="container-fluid">
     <!-- Button trigger modal -->
