updated draw types, added message for saving

--- a/index.html
+++ b/index.html
@@ -85,6 +85,32 @@
         </div>
       </div>
 
+
+
+      <div class="modal fade" id="savedDrawing" tabindex="-1" role="dialog" aria-labelledby="exampleModalCenterTitle" aria-hidden="true">
+        <div class="modal-dialog modal-dialog-centered" role="document">
+          <div class="modal-content">
+            <div class="modal-header">
+              <h5 class="modal-title" id="exampleModalLongTitle">DrawLoop</h5>
+              <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                <span aria-hidden="true">&times;</span>
+              </button>
+            </div>
+            <div class="modal-body" class="modal-dialog modal-lg">
+            <ul>
+                <h5>Saved!</h5> 
+                <p>Head to gallery to see!</p>
+            </ul>
+            </div>
+            <div class="modal-footer">
+              <button type="button" class="user" data-dismiss="modal">Close</button>
+            </div>
+          </div> 
+        </div>
+      </div>
+
+
+
       <div class="modal fade" id="galleryWarning" tabindex="-1" role="dialog" aria-labelledby="exampleModalCenterTitle" aria-hidden="true">
             <div class="modal-dialog modal-dialog-centered" role="document">
               <div class="modal-content">
