able to delete invidiual shape, looper amount extended to 8, draw type for each sound created

--- a/index.html
+++ b/index.html
@@ -134,6 +134,28 @@
             </div>
           </div>
 
+          <div class="modal fade" id="looperCountWarning" tabindex="-1" role="dialog" aria-labelledby="exampleModalCenterTitle" aria-hidden="true">
+            <div class="modal-dialog modal-dialog-centered" role="document">
+              <div class="modal-content">
+                <div class="modal-header">
+                  <h5 class="modal-title" id="exampleModalLongTitle">DrawLoop</h5>
+                  <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                    <span aria-hidden="true">&times;</span>
+                  </button>
+                </div>
+                <div class="modal-body" class="modal-dialog modal-lg">
+                <ul>
+                    <h5>Heads up!</h5>
+                    <p>You have drawn the max amount of loopers, delete something to continue :)</p>
+                </ul>
+                </div>
+                <div class="modal-footer">
+                  <button type="button" class="user" data-dismiss="modal">Okay!</button>
+                </div>
+              </div> 
+            </div>
+          </div>
+
 
 
 
