effect 1 slider working to change pitch of sample

--- a/index.html
+++ b/index.html
@@ -177,6 +177,9 @@
 
     <!-- SCRIPTS -->
 </div>
+<div id="placeHolder">
+  
+</div>
 
     <footer class="container-fluid">
         <div class="col">
