updated jQuery interactivity with hover and click states for user buttons and toolbox

--- a/index.html
+++ b/index.html
@@ -35,6 +35,9 @@
 <!-- Button trigger modal -->
       
       <!-- Modal -->
+
+
+      <!-- ///////////////////////////// INFO  ///////////////////////////// -->
       <div class="modal fade" id="info" tabindex="-1" role="dialog" aria-labelledby="exampleModalCenterTitle" aria-hidden="true">
         <div class="modal-dialog modal-dialog-centered" role="document">
           <div class="modal-content">
@@ -62,6 +65,11 @@
         </div>
       </div>
 
+
+
+
+
+            <!-- ///////////////////////////// NEW DRAWING  ///////////////////////////// -->
       <div class="modal fade" id="newDrawing" tabindex="-1" role="dialog" aria-labelledby="exampleModalCenterTitle" aria-hidden="true">
         <div class="modal-dialog modal-dialog-centered" role="document">
           <div class="modal-content">
@@ -87,7 +95,11 @@
 
 
 
-      <div class="modal fade" id="savedDrawing" tabindex="-1" role="dialog" aria-labelledby="exampleModalCenterTitle" aria-hidden="true">
+
+
+
+            <!-- ///////////////////////////// SAVED/HEAD TO GALLERY  ///////////////////////////// -->
+      <div class="modal fade" id="savingDrawing" tabindex="-1" role="dialog" aria-labelledby="exampleModalCenterTitle" aria-hidden="true">
         <div class="modal-dialog modal-dialog-centered" role="document">
           <div class="modal-content">
             <div class="modal-header">
@@ -98,13 +110,13 @@
             </div>
             <div class="modal-body" class="modal-dialog modal-lg">
             <ul>
-                <h5>Saved!</h5> 
-                <p>Head to gallery to see!</p>
+                <h5>Recording....</h5> 
+                <p>When this dialog box closes, your drawing will be saved. Head to gallery to see! </p>
             </ul>
             </div>
-            <div class="modal-footer">
+            <!-- <div class="modal-footer">
               <button type="button" class="user" data-dismiss="modal">Close</button>
-            </div>
+            </div> -->
           </div> 
         </div>
       </div>
