got mediaRecorder sending video to firebase, able to pull down and populate gallery. Next need to add audio to recording

--- a/index.html
+++ b/index.html
@@ -189,9 +189,7 @@
 
     <!-- SCRIPTS -->
 </div>
-<div id="placeHolder">
-  
-</div>
+<video class='row' id="video"></video>
 
     <footer class="container-fluid">
         <div class="col">
