loopers in sync, recording in sync

--- a/index.html
+++ b/index.html
@@ -50,12 +50,12 @@
             <div class="modal-body" class="modal-dialog modal-lg">
                 <h5>How to make a loopy drawing: </h5>
             <ul>
-                <li><p>Click a draw tool in the "toolbox" section</p></li>
-               <li><p>Draw something on the canvas!</p></li>
+                <li><p>Click to select a draw tool in the "toolbox" section. A tool has to be selected in order to draw.</p></li>
+               <li><p>Draw something on the canvas with your mouse.</p></li>
                <li><p>When you release the mouse, a module will pop into the "tools" section. You can modify or delete your sound drawing here.</p></li>
-                <li><p>If you like what you made, hit "save" in top right corner to save to the gallery.</p></li>
-                <li><p>Press "new" to start over</p></h3>
-                <li><p>Press "gallery" to see a gallery of other loopings</p></li>
+                <li><p>The drawings are sound loops that are synced, in other words, they will automatically be time with each other.</p></li>
+                <li><p>Press "save" to create a 30 second recording, and download a snapshot of your loop.</p></h3>
+                <li><p>That's it! Have fun :) </p></li>
             </ul>
             </div>
             <div class="modal-footer">
@@ -111,7 +111,7 @@
             <div class="modal-body" class="modal-dialog modal-lg">
             <ul>
                 <h5>Recording....</h5> 
-                <p>When this dialog box closes, your drawing will be saved. Head to gallery to see! </p>
+                <p>A snapshot of your canvas and an audio file will download shortly :) </p>
             </ul>
             </div>
             <!-- <div class="modal-footer">
